[gd_scene load_steps=8 format=3 uid="uid://b7i5snms70i4y"]

[ext_resource type="Script" path="res://src/yoke_baddie.gd" id="1_xxvgg"]
[ext_resource type="Texture2D" uid="uid://dglyptcs1o2sb" path="res://Assets/YokeGuy/yokeguy.png" id="2_oae5u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ox138"]
atlas = ExtResource("2_oae5u")
region = Rect2(0, 0, 29, 43)

[sub_resource type="SpriteFrames" id="SpriteFrames_0b8pf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox138")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8y1q"]
size = Vector2(16.0724, 3.46478)

[sub_resource type="CircleShape2D" id="CircleShape2D_lrx02"]
radius = 14.5122

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2oy5"]
size = Vector2(13.8898, 1.77027)

[node name="YokeBaddie" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(2, 2)
script = ExtResource("1_xxvgg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0b8pf")
animation = &"walk"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="AnimatedSprite2D"]

[node name="BounceArea" type="Area2D" parent="."]
position = Vector2(-0.207455, -8.83507)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2(-0.800373, 0)
shape = SubResource("RectangleShape2D_y8y1q")

[node name="PainArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PainArea"]
position = Vector2(0.0567975, 5.0222)
shape = SubResource("CircleShape2D_lrx02")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.182724, 21.3621)
shape = SubResource("RectangleShape2D_k2oy5")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="BounceArea" to="." method="_on_bounce_area_body_entered"]
[connection signal="body_shape_entered" from="BounceArea" to="." method="_on_bounce_area_body_shape_entered"]
[connection signal="body_entered" from="PainArea" to="." method="_on_pain_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
